LAU-908 add GET jurisdictionsCaseTypes endpoint